src/assets/sass/components/program-element.scss
.accordion-button {
    // position: absolute;
    // left: 0;
    font-size: 1.5em;

    // transition: transform .1s ease;

    // .is-open & {
    //     transform: rotate(90deg);
    // }
    text-align: center;
    width: 100%;
    cursor: pointer;
}

.program {
    // margin-top: 1rem;
    padding: 1em 0;

    &-element {
        margin-bottom: 1em;
        max-width: 50ch;
        // margin-left: 10px;
        margin-top: -1px;
        position: relative;
        overflow: hidden;

        &.is-hidden {
            display: none;
        }

        &__summary {
            display: flex;
            justify-content: flex-start;
            align-items: center;
        }

        &__calendar {
            border: 1px solid;
            border-radius: 3px;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            width: 50px;
            margin-right: 1em;

            .day, .mon {
                background-color: black;
                color: white;
                width: 100%;
                text-align: center;
                font-size: .8em;
            }

            .num {
                font-weight: bold;
                font-size: 2em;
            }
        }

        &__header {
            display: inline-flex;
            justify-content: flex-start;
            align-items: flex-start;
            flex-direction: column;
            gap: .4em;
        }

        h2 {
            display: inline-block;
            // font-weight: bold;
            font-size: 1.5em;
            margin-bottom: .3em;
        }

        &__event-type {
            text-transform: uppercase;
            font-family: monospace;
            font-size: .9em;
            // border: 1px solid;
            border-radius: 30px;
            // padding: .5em .7em;
            margin-left: 2rem;
            display: inline-block;
            // background-color: black;
            // color: white;
        }

        &__event-details {
            text-indent: 2em;
            max-height: 80px;
            overflow: hidden;
            position: relative;

            .is-open & {
                max-height: unset;
            }

            transition: height .1s ease;

            &::before {
                .is-open & {
                    opacity: 0;
                }
                transition: opacity .1s ease;
                content: "";
                background: linear-gradient(rgba(255,255,255,0) 70%, rgba(255,255,255,1));
                height: 30px;
                width: 100%;
                position: absolute;
                bottom: 0;
                left: 0;
            }
        }
    }
}

